// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin should create component 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createStore } from 'effector';
import { createComponent } from 'effector-react';
const foo = createStore('foo', {
  name: \\"foo\\",
  sid: \\"-jdfd95\\"
});
const Foo = createComponent(foo, (props, data) => null, {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 12
  },
  name: \\"Foo\\",
  sid: \\"Foo /src/babel/__tests__/fixtures/create-component.js [6, 12]}\\"
});"
`;

exports[`babel-plugin should create domain 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  name: \\"domain\\",
  sid: \\"-r2jo9q\\"
});
const foo = createDomain('bar', {
  name: \\"foo\\",
  sid: \\"-kylwgu\\"
});"
`;

exports[`babel-plugin should create domain domain 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  name: \\"domain\\",
  sid: \\"-jsqfil\\"
});
const foo = domain.domain(\\"foo\\", {
  name: \\"foo\\",
  sid: \\"-veeiq1\\"
});
const bar = domain.domain('baz', {
  name: \\"bar\\",
  sid: \\"ksdvxf\\"
});"
`;

exports[`babel-plugin should create domain effect 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  name: \\"domain\\",
  sid: \\"-gfxji2\\"
});
const a = domain.effect(\\"a\\", {
  name: \\"a\\",
  sid: \\"-yaax6i\\"
});

const f = () => domain.effect(\\"f\\", {
  name: \\"f\\",
  sid: \\"jyl44k\\"
});

const b = domain.effect('hello', {
  name: \\"b\\",
  sid: \\"y8n8xx\\"
});

const g = () => domain.effect('baz', {
  name: \\"g\\",
  sid: \\"hgf89v\\"
});"
`;

exports[`babel-plugin should create domain event 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  name: \\"domain\\",
  sid: \\"3a2uet\\"
});
const a = domain.event(\\"a\\", {
  name: \\"a\\",
  sid: \\"-h01fmt\\"
});

const f = () => domain.event(\\"f\\", {
  name: \\"f\\",
  sid: \\"-nyhxip\\"
});

const b = domain.event('asm', {
  name: \\"b\\",
  sid: \\"p2tf20\\"
});

const g = () => domain.event('tasm', {
  name: \\"g\\",
  sid: \\"i4cx64\\"
});"
`;

exports[`babel-plugin should create domain store 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  name: \\"domain\\",
  sid: \\"-fpi1bm\\"
});
const a = domain.store('bar', {
  name: \\"a\\",
  sid: \\"z1hqlw\\"
});
const b = domain.store('h', {
  ɔ: {
    option: 'test',
    ['na' + 'me']: 'LOL'
  },
  name: \\"b\\",
  sid: \\"5m6wxe\\"
});
const c = domain.store('h', {
  ɔ: {
    name: 'test'
  },
  name: \\"c\\",
  sid: \\"-nt3wr4\\"
}); //$off

const d = domain.store('h', {
  ɔ: null,
  name: \\"d\\",
  sid: \\"a6fhta\\"
}); //$off

const e = domain.store('h', {
  ɔ: 4234,
  name: \\"e\\",
  sid: \\"7o9lyl\\"
});
const f = domain.store('h', {
  ɔ: {},
  name: \\"f\\",
  sid: \\"4p23pp\\"
});"
`;

exports[`babel-plugin should create effect 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createEffect } from 'effector';
const foo = createEffect(\\"foo\\", {
  name: \\"foo\\",
  sid: \\"-hlt0gb\\"
});
const bar = createEffect('hello', {
  name: \\"bar\\",
  sid: \\"-ydp1p5\\"
});
const baz = createEffect({
  handler() {
    return 0;
  }

}, {
  name: \\"baz\\",
  sid: \\"-v7s7ya\\"
});
const quux = createEffect('nice', {
  ɔ: {
    handler() {
      return 0;
    }

  },
  name: \\"quux\\",
  sid: \\"-evyqqj\\"
});

const f = () => createEffect(\\"f\\", {
  name: \\"f\\",
  sid: \\"y82cl8\\"
});"
`;

exports[`babel-plugin should create event 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createEvent } from 'effector';
const foo = createEvent(\\"foo\\", {
  name: \\"foo\\",
  sid: \\"qm3jl6\\"
});
const bar = createEvent('hello', {
  name: \\"bar\\",
  sid: \\"f2obva\\"
});
const baz = createEvent({
  name: 'nice'
}, {
  name: \\"baz\\",
  sid: \\"-yrvnsz\\"
});

const f = () => createEvent(\\"f\\", {
  name: \\"f\\",
  sid: \\"vi2m03\\"
});"
`;

exports[`babel-plugin should create store 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createStore } from 'effector';
const foo = createStore('foo', {
  name: \\"foo\\",
  sid: \\"75h1gk\\"
});
const a = createStore('h', {
  name: \\"a\\",
  sid: \\"osbuqo\\"
});
const b = createStore('h', {
  ɔ: {},
  name: \\"b\\",
  sid: \\"-yawrls\\"
}); //$off

const c = createStore('h', {
  ɔ: 23020,
  name: \\"c\\",
  sid: \\"-lvzpkx\\"
});
const config = {
  option: 0
};
const dod = createStore(null, {
  ɔ: config,
  name: \\"dod\\",
  sid: \\"qtb6qu\\"
});

const f = a => createStore(a, {
  name: \\"f\\",
  sid: \\"42loz8\\"
});"
`;

exports[`babel-plugin should use store 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createStore } from 'effector';
import { useStore } from 'effector-react';
const foo = createStore('foo', {
  name: \\"foo\\",
  sid: \\"ciaon0\\"
});
const bar = createStore('bar', {
  name: \\"bar\\",
  sid: \\"-t7ybo2\\"
});

const Foo = () => {
  const data = useStore(foo, {
    loc: {
      file: _effectorFileName,
      line: 8,
      column: 15
    },
    name: \\"Foo\\",
    sid: \\"Foo /src/babel/__tests__/fixtures/use-store.js [8, 15]}\\"
  });
  const data0 = useStore(bar, {
    loc: {
      file: _effectorFileName,
      line: 9,
      column: 16
    },
    name: \\"Foo\\",
    sid: \\"Foo /src/babel/__tests__/fixtures/use-store.js [9, 16]}\\"
  });
};"
`;
